# oreon-build-service

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh  stop.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_package_preferred_mock_env.py  003_mock_env_architecture_nullable.py  004_build_job_branch.py  005_promotion_status_package.py  006_artifact_signed_flag.py  007_cve_tables.py  008_security_advisories_handling.py
deploy/: oreon-api.service  oreon-scheduler.service  oreon-watchdog.service  oreon-worker.env.example  oreon-worker.service
docs/: WORKER_DEPLOY.md
packaging/: oreon-build-worker.spec  tarball.sh
scripts/: deploy.sh  gpg.sh
signing-export/: RPM-GPG-KEY-oreon-build.pub
src/oreon_build/: __init__.py  config.py
src/oreon_build/api/: __init__.py  deps.py  main.py  schemas.py  worker_api.py
src/oreon_build/cli/: __init__.py  main.py
src/oreon_build/core/: __init__.py  audit.py  auth.py  security.py
src/oreon_build/db/: __init__.py  session.py
src/oreon_build/models/: __init__.py  account.py  artifact.py  audit.py  build.py  cve.py  mock_env.py  package.py  promotion.py  release.py  repo.py  schedule.py  security_advisory.py  signing.py  worker.py
src/oreon_build/publisher/: main.py
src/oreon_build/scheduler/: main.py
tests/: __init__.py  test_api.py
web/: admin.html  advisory-custom.html  advisory-cve.html  build.html  builds.html  index.html  mock-environments.html  packages.html  promotions.html  releases.html  repos.html  search.html  watchdog.html  workers.html
web/static/: app.js  style.css
(+26 files in other folders)
