[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oreon-build-service"
version = "1.0.0"
description = "Production-grade Linux distro build system for oreon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Oreon HQ" }]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "httpx"]

[project.scripts]
oreon-buildctl = "oreon_build.cli.main:cli"
oreon-api = "oreon_build.api.main:run_server"
oreon-worker = "oreon_build.worker.main:main"
oreon-scheduler = "oreon_build.scheduler.main:main"
oreon-publisher = "oreon_build.publisher.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
